feat: Add Tailwind CSS classes to packages.html for a clean and organized presentation.

--- a/packages.html
+++ b/packages.html
@@ -44,7 +44,7 @@
 					<img class="w-full h-56 object-cover" src="https://picsum.photos/800/600" alt="Coastal Retreat">
 					<div class="p-6">
 						<h2 class="text-2xl font-semibold text-gray-900">Coastal Retreat Package</h2>
-						<p class="mt-2 text-gray-600">Enjoy a relaxing getaway to a serene coastal destination. This package includes luxurious accommodations, spa treatments, and gourmet dining.</p>
+						<p class="mt-2 text-gray-600">Indulge in the tranquility of the seaside with our Coastal Retreat Package. Nestled in a charming beachfront villa in Santorini, Greece, you'll enjoy breathtaking sunsets, private beach access, and rejuvenating spa treatments. Savor delectable Mediterranean cuisine prepared by our in-house chef. This package offers the perfect blend of relaxation and luxury.</p>
 						<div class="mt-4">
 							<span class="text-xl font-bold text-gray-900">$999</span>
 							<span class="text-gray-500">/person</span>
@@ -58,7 +58,7 @@
 					<img class="w-full h-56 object-cover" src="https://picsum.photos/801/600" alt="Island Adventure">
 					<div class="p-6">
 						<h2 class="text-2xl font-semibold text-gray-900">Island Adventure Package</h2>
-						<p class="mt-2 text-gray-600">Embark on an exciting island adventure with thrilling water sports, guided tours, and breathtaking views. Perfect for adrenaline junkies and nature lovers.</p>
+						<p class="mt-2 text-gray-600">Unleash your adventurous spirit with our Island Adventure Package! Explore the exotic landscapes of Bali, Indonesia. Experience thrilling water sports such as surfing and scuba diving. Trek through lush rainforests, discover hidden waterfalls, and immerse yourself in the vibrant local culture. Includes guided tours and exhilarating activities for unforgettable memories.</p>
 						<div class="mt-4">
 							<span class="text-xl font-bold text-gray-900">$1299</span>
 							<span class="text-gray-500">/person</span>
@@ -72,7 +72,7 @@
 					<img class="w-full h-56 object-cover" src="https://picsum.photos/802/600" alt="Luxury Cruise">
 					<div class="p-6">
 						<h2 class="text-2xl font-semibold text-gray-900">Luxury Cruise Package</h2>
-						<p class="mt-2 text-gray-600">Experience the ultimate in luxury and relaxation with a cruise along the stunning coastline. Enjoy world-class amenities, gourmet cuisine, and unforgettable entertainment.</p>
+						<p class="mt-2 text-gray-600">Set sail on a voyage of pure indulgence with our Luxury Cruise Package. Explore the enchanting Mediterranean aboard a world-class cruise ship. Indulge in gourmet cuisine, enjoy live entertainment, and pamper yourself with spa treatments. Visit picturesque coastal cities, explore ancient ruins, and create unforgettable memories. Experience the ultimate in luxury and relaxation.</p>
 						<div class="mt-4">
 							<span class="text-xl font-bold text-gray-900">$1999</span>
 							<span class="text-gray-500">/person</span>
@@ -86,7 +86,7 @@
 					<img class="w-full h-56 object-cover" src="https://picsum.photos/803/600" alt="Romantic Getaway">
 					<div class="p-6">
 						<h2 class="text-2xl font-semibold text-gray-900">Romantic Getaway Package</h2>
-						<p class="mt-2 text-gray-600">Escape with your loved one to a secluded coastal paradise. Includes private beach access, candlelit dinners, and couples massage.</p>
+						<p class="mt-2 text-gray-600">Rekindle the flame with our Romantic Getaway Package. Escape to the idyllic shores of the Maldives, where you'll stay in an overwater bungalow with breathtaking ocean views. Enjoy private beach access, candlelit dinners under the stars, and couples massage. Create unforgettable moments with your loved one in this tropical paradise.</p>
 						<div class="mt-4">
 							<span class="text-xl font-bold text-gray-900">$1499</span>
 							<span class="text-gray-500">/couple</span>
@@ -100,7 +100,7 @@
 					<img class="w-full h-56 object-cover" src="https://picsum.photos/804/600" alt="Family Fun Package">
 					<div class="p-6">
 						<h2 class="text-2xl font-semibold text-gray-900">Family Fun Package</h2>
-						<p class="mt-2 text-gray-600">Create lasting memories with your family on this exciting coastal adventure. Includes kid-friendly activities, spacious accommodations, and delicious meals.</p>
+						<p class="mt-2 text-gray-600">Create lasting memories with our Family Fun Package. Head to the sunny beaches of Orlando, Florida, where you'll enjoy spacious accommodations near world-famous theme parks. Includes kid-friendly activities, delicious meals, and unforgettable experiences for the whole family.</p>
 						<div class="mt-4">
 							<span class="text-xl font-bold text-gray-900">$2499</span>
 							<span class="text-gray-500">/family</span>
@@ -114,7 +114,7 @@
 					<img class="w-full h-56 object-cover" src="https://picsum.photos/805/600" alt="Eco-Tourism Adventure">
 					<div class="p-6">
 						<h2 class="text-2xl font-semibold text-gray-900">Eco-Tourism Adventure</h2>
-						<p class="mt-2 text-gray-600">Explore the natural beauty of our coast with sustainable and eco-friendly tours. Learn about local wildlife and conservation efforts.</p>
+						<p class="mt-2 text-gray-600">Embark on a sustainable journey with our Eco-Tourism Adventure. Explore the pristine rainforests of Costa Rica, where you'll learn about local wildlife and conservation efforts. Includes guided hikes, zip-lining adventures, and opportunities to support local communities. Discover the beauty of nature while making a positive impact.</p>
 						<div class="mt-4">
 							<span class="text-xl font-bold text-gray-900">$799</span>
 							<span class="text-gray-500">/person</span>
