--- a/blog.html
+++ b/blog.html
@@ -3,11 +3,93 @@
 <head>
 	<meta charset='UTF-8'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-	<title>Coastal_Escape_Travel</title>
+	<title>Coastal_Escape_Travel - Blog</title>
 	<script src='https://cdn.tailwindcss.com'></script>
 	<link rel='stylesheet' href='assets/css/style.css'>
 </head>
-<body>
-	<!-- Content for blog.html will be generated here -->
+<body class="bg-gray-100">
+	<!-- Navigation Bar -->
+	<nav class="bg-blue-500 text-white py-4">
+		<div class="container mx-auto flex justify-between items-center">
+			<a href="index.html" class="text-2xl font-bold">Coastal Escape Travel</a>
+			<div class="space-x-6">
+				<a href="index.html" class="hover:text-gray-200">Home</a>
+				<a href="destinations.html" class="hover:text-gray-200">Destinations</a>
+				<a href="packages.html" class="hover:text-gray-200">Packages</a>
+				<a href="blog.html" class="hover:text-gray-200">Blog</a>
+				<a href="contact.html" class="hover:text-gray-200">Contact</a>
+			</div>
+		</div>
+	</nav>
+
+	<!-- Blog Section -->
+	<section class="container mx-auto py-8">
+		<h1 class="text-3xl font-bold mb-6 text-center">Coastal Travel Blog</h1>
+
+		<!-- Blog Post 1 -->
+		<div class="bg-white rounded-lg shadow-md overflow-hidden mb-6">
+			<img src="https://picsum.photos/800/400" alt="Coastal Image" class="w-full h-64 object-cover">
+			<div class="p-6">
+				<h2 class="text-2xl font-bold mb-2">Exploring the Hidden Gems of the Amalfi Coast</h2>
+				<p class="text-gray-700 mb-4">
+					The Amalfi Coast, a UNESCO World Heritage site, is renowned for its dramatic cliffs, picturesque towns, and azure waters. But beyond the popular destinations like Positano and Amalfi, lies a treasure trove of hidden gems waiting to be discovered.
+				</p>
+				<p class="text-gray-600">
+					Posted on: October 26, 2023
+				</p>
+				<a href="#" class="inline-block mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Read More</a>
+			</div>
+		</div>
+
+		<!-- Blog Post 2 -->
+		<div class="bg-white rounded-lg shadow-md overflow-hidden mb-6">
+			<img src="https://picsum.photos/800/401" alt="Coastal Image" class="w-full h-64 object-cover">
+			<div class="p-6">
+				<h2 class="text-2xl font-bold mb-2">Sustainable Tourism: Protecting Our Coastal Paradise</h2>
+				<p class="text-gray-700 mb-4">
+					As travelers, we have a responsibility to minimize our impact on the environment and support sustainable practices. Discover how you can travel responsibly and help preserve the beauty of our coastal destinations for future generations.
+				</p>
+				<p class="text-gray-600">
+					Posted on: October 20, 2023
+				</p>
+				<a href="#" class="inline-block mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Read More</a>
+			</div>
+		</div>
+
+		<!-- Blog Post 3 -->
+		<div class="bg-white rounded-lg shadow-md overflow-hidden mb-6">
+			<img src="https://picsum.photos/800/402" alt="Coastal Image" class="w-full h-64 object-cover">
+			<div class="p-6">
+				<h2 class="text-2xl font-bold mb-2">The Best Seafood Restaurants in the Mediterranean</h2>
+				<p class="text-gray-700 mb-4">
+					Indulge in the freshest flavors of the sea at our top-rated seafood restaurants in the Mediterranean. From grilled octopus to paella, prepare your taste buds for a culinary journey you won't forget.
+				</p>
+				<p class="text-gray-600">
+					Posted on: October 15, 2023
+				</p>
+				<a href="#" class="inline-block mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Read More</a>
+			</div>
+		</div>
+
+        <!-- Blog Post 4 -->
+		<div class="bg-white rounded-lg shadow-md overflow-hidden mb-6">
+			<img src="https://picsum.photos/800/403" alt="Coastal Image" class="w-full h-64 object-cover">
+			<div class="p-6">
+				<h2 class="text-2xl font-bold mb-2">Kayaking Adventures in the Fjords of Norway</h2>
+				<p class="text-gray-700 mb-4">
+					Experience the breathtaking beauty of Norway's fjords from a unique perspective - by kayak! Paddle through pristine waters, surrounded by towering cliffs and cascading waterfalls.
+				</p>
+				<p class="text-gray-600">
+					Posted on: October 10, 2023
+				</p>
+				<a href="#" class="inline-block mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Read More</a>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer class="bg-gray-800 text-white py-4 text-center">
+		<p>&copy; 2023 Coastal Escape Travel. All rights reserved.</p>
+	</footer>
 </body>
 </html>
