feat: Add Tailwind CSS classes to blog.html for readability and visual appeal.

--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
 			<div class="p-6">
 				<h2 class="text-2xl font-bold mb-2">Exploring the Hidden Gems of the Amalfi Coast</h2>
 				<p class="text-gray-700 mb-4">
-					The Amalfi Coast, a UNESCO World Heritage site, is renowned for its dramatic cliffs, picturesque towns, and azure waters. But beyond the popular destinations like Positano and Amalfi, lies a treasure trove of hidden gems waiting to be discovered.
+					The Amalfi Coast, a UNESCO World Heritage site, is renowned for its dramatic cliffs, picturesque towns, and azure waters. But beyond the popular destinations like Positano and Amalfi, lies a treasure trove of hidden gems waiting to be discovered. Imagine stumbling upon a secluded cove accessible only by boat, or a family-run trattoria serving authentic regional cuisine passed down through generations. This is the Amalfi Coast less traveled, an experience for those seeking genuine connection with the land and its people.
 				</p>
 				<p class="text-gray-600">
 					Posted on: October 26, 2023
@@ -47,7 +47,7 @@
 			<div class="p-6">
 				<h2 class="text-2xl font-bold mb-2">Sustainable Tourism: Protecting Our Coastal Paradise</h2>
 				<p class="text-gray-700 mb-4">
-					As travelers, we have a responsibility to minimize our impact on the environment and support sustainable practices. Discover how you can travel responsibly and help preserve the beauty of our coastal destinations for future generations.
+					As travelers, we have a responsibility to minimize our impact on the environment and support sustainable practices. Discover how you can travel responsibly and help preserve the beauty of our coastal destinations for future generations. From choosing eco-friendly accommodations to participating in community-based tourism initiatives, every small action can make a big difference. Learn about the importance of reducing waste, conserving water, and respecting local cultures as you explore the world's stunning coastlines.
 				</p>
 				<p class="text-gray-600">
 					Posted on: October 20, 2023
@@ -62,7 +62,7 @@
 			<div class="p-6">
 				<h2 class="text-2xl font-bold mb-2">The Best Seafood Restaurants in the Mediterranean</h2>
 				<p class="text-gray-700 mb-4">
-					Indulge in the freshest flavors of the sea at our top-rated seafood restaurants in the Mediterranean. From grilled octopus to paella, prepare your taste buds for a culinary journey you won't forget.
+					Indulge in the freshest flavors of the sea at our top-rated seafood restaurants in the Mediterranean. From grilled octopus to paella, prepare your taste buds for a culinary journey you won't forget. Imagine savoring succulent prawns drizzled with olive oil, or indulging in a creamy seafood risotto prepared with locally sourced ingredients. This guide will lead you to the most authentic and unforgettable culinary experiences along the Mediterranean coast.
 				</p>
 				<p class="text-gray-600">
 					Posted on: October 15, 2023
@@ -77,7 +77,7 @@
 			<div class="p-6">
 				<h2 class="text-2xl font-bold mb-2">Kayaking Adventures in the Fjords of Norway</h2>
 				<p class="text-gray-700 mb-4">
-					Experience the breathtaking beauty of Norway's fjords from a unique perspective - by kayak! Paddle through pristine waters, surrounded by towering cliffs and cascading waterfalls.
+					Experience the breathtaking beauty of Norway's fjords from a unique perspective - by kayak! Paddle through pristine waters, surrounded by towering cliffs and cascading waterfalls. The silence is broken only by the gentle lapping of water against your kayak and the distant calls of seabirds. Discover hidden coves, witness seals basking in the sun, and immerse yourself in the unspoiled wilderness of Norway's iconic landscapes.
 				</p>
 				<p class="text-gray-600">
 					Posted on: October 10, 2023
