feat: Implement a pagination system for the blog posts in blog.html.

--- a/blog.html
+++ b/blog.html
@@ -85,6 +85,15 @@
 				<a href="#" class="inline-block mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Read More</a>
 			</div>
 		</div>
+
+		<!-- Pagination -->
+		<div class="flex justify-center mt-8">
+			<a href="#" class="px-4 py-2 mx-1 bg-white text-gray-700 rounded-md hover:bg-gray-200">&laquo;</a>
+			<a href="#" class="px-4 py-2 mx-1 bg-blue-500 text-white rounded-md hover:bg-blue-700">1</a>
+			<a href="#" class="px-4 py-2 mx-1 bg-white text-gray-700 rounded-md hover:bg-gray-200">2</a>
+			<a href="#" class="px-4 py-2 mx-1 bg-white text-gray-700 rounded-md hover:bg-gray-200">3</a>
+			<a href="#" class="px-4 py-2 mx-1 bg-white text-gray-700 rounded-md hover:bg-gray-200">&raquo;</a>
+		</div>
 	</section>
 
 	<!-- Footer -->
